<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_camera"
        app:title="@string/camera"
        >

        <ListPreference
            app:defaultValue="front"
            app:entries="@array/camera_lens"
            app:entryValues="@array/camera_lens_values"
            app:key="camera_lens"
            app:title="@string/camera_lens"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_threshold"
        app:title="@string/thresholds">

        <EditTextPreference
            app:defaultValue="0.7"
            app:key="liveness_threshold"
            app:title="@string/liveness_threshold"
            app:useSimpleSummaryProvider="true"
            />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/liveness_level"
            app:entryValues="@array/liveness_level_values"
            app:key="liveness_level"
            app:title="@string/liveness_level"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.8"
            app:key="identify_threshold"
            app:title="@string/identify_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="10.0"
            app:key="yaw_threshold"
            app:title="@string/yaw_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="10.0"
            app:key="roll_threshold"
            app:title="@string/roll_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="10.0"
            app:key="pitch_threshold"
            app:title="@string/pitch_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.5"
            app:key="occlusion_threshold"
            app:title="@string/occlusion_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.8"
            app:key="eyeclose_threshold"
            app:title="@string/eyeclose_threshold"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0.5"
            app:key="mouthopen_threshold"
            app:title="@string/mouthopen_threshold"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_reset"
        app:title="@string/reset">

        <Preference
            app:key="restore_default_settings"
            app:title="@string/restore_default_settings" />

        <Preference
            app:key="clear_all_person"
            app:title="@string/clear_all_person" />

    </PreferenceCategory>

</PreferenceScreen>